# wxsqliteplus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  Dockerfile  Makefile  Makefile.in  README.md  configure  configure.ac  index.html  params.json
3rd/: CMakeLists.txt
locale/: wxSqlitePlus.pot
locale/zh_CN/LC_MESSAGES/: wxstd.po
src/: aboutdlg.cpp  aboutdlg.h  addcolumn.cpp  addcolumn.h  attachdbdlg.cpp  attachdbdlg.h  backrestdlg.cpp  backrestdlg.h  blobdlg.cpp  blobdlg.h  createindex.cpp  createindex.h  createtable.cpp  createtable.h  createtrigger.cpp  createtrigger.h  createview.cpp  createview.h  dbbook.cpp  dbbook.h  describedlg.cpp  describedlg.h  detachdbdlg.cpp  detachdbdlg.h  dropobject.cpp  dropobject.h  encrypkeydlg.cpp  encrypkeydlg.h  filterdlg.cpp  filterdlg.h  indexbook.cpp  indexbook.h  ipcframe.cpp  paneldata.cpp  paneldata.h  preferences.cpp  preferences.h  sortdlg.cpp  sortdlg.h  specgrid.cpp  (+27 more)
src/images/: add.xpm  attachdb.xpm  autotransact.xpm  clear.xpm  coldown.xpm  colup.xpm  commit.xpm  compactdb.xpm  copy.xpm  cut.xpm  database.xpm  dbnew.xpm  explain.xpm  field.xpm  field2.xpm  indexe.xpm  indexe_tmp.xpm  indexecreate.xpm  indexedrop.xpm  indexes.xpm  leftarrow1.xpm  leftarrow2.xpm  log.xpm  logo128.xpm  logo32.xpm  opendb.xpm  paste.xpm  power_sqlite.xpm  redo.xpm  refresh.xpm  remove.xpm  rightarrow1.xpm  rightarrow2.xpm  rollback.xpm  runscript.xpm  runsql.xpm  sqlhisto.xpm  sqlicon.xpm  starttransact.xpm  stoptransact.xpm  (+16 more)
zh_CN/: wxsqliteplus.po
